--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,40 @@
         </configuration>
       </plugin>
     </plugins>
+    <pluginManagement>
+    	<plugins>
+    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+    		<plugin>
+    			<groupId>org.eclipse.m2e</groupId>
+    			<artifactId>lifecycle-mapping</artifactId>
+    			<version>1.0.0</version>
+    			<configuration>
+    				<lifecycleMappingMetadata>
+    					<pluginExecutions>
+    						<pluginExecution>
+    							<pluginExecutionFilter>
+    								<groupId>
+    									org.apache.maven.plugins
+    								</groupId>
+    								<artifactId>
+    									maven-compiler-plugin
+    								</artifactId>
+    								<versionRange>[3.1,)</versionRange>
+    								<goals>
+    									<goal>compile</goal>
+    									<goal>testCompile</goal>
+    								</goals>
+    							</pluginExecutionFilter>
+    							<action>
+    								<ignore></ignore>
+    							</action>
+    						</pluginExecution>
+    					</pluginExecutions>
+    				</lifecycleMappingMetadata>
+    			</configuration>
+    		</plugin>
+    	</plugins>
+    </pluginManagement>
   </build>
   <dependencies>
   	<dependency>
@@ -23,11 +57,6 @@
   		<version>2.2.2</version>
   	</dependency>
   	
-  	<dependency>
-  		<groupId>org.umlgraph</groupId>
-  		<artifactId>umlgraph</artifactId>
-  		<version>5.6.6</version>
-  	</dependency>
   	<dependency>
   		<groupId>net.sourceforge.plantuml</groupId>
   		<artifactId>plantuml</artifactId>
